[tool.poetry]
name = "ai-img-gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_img_gen"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.25.0"
python-dotenv = "^0.21.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
